@@ -100,6 +100,16 @@
     <string name="pref_summary_channel_join">Announce name of the user joining the channel</string>
     <string name="pref_title_channel_leave">User leaves the channel</string>
     <string name="pref_summary_channel_leave">Announce name of the user leaving the channel</string>
+    <string name="pref_title_transmit_voice">Voice stream transmission</string>
+    <string name="pref_summary_transmit_voice">Announce transmission of voice streams</string>
+    <string name="pref_title_transmit_vid">Video stream transmission</string>
+    <string name="pref_summary_transmit_vid">Announce transmission of video streams</string>
+    <string name="pref_title_transmit_desk">Desktop session transmission</string>
+    <string name="pref_summary_transmit_desk">Announce transmission of desktop sessions</string>
+    <string name="pref_title_transmit_media">Media stream transmission</string>
+    <string name="pref_summary_transmit_media">Announce transmission of media streams</string>
+    <string name="pref_title_transmit_channel_msg">Channel message transmission</string>
+    <string name="pref_summary_transmit_channel_msg">Announce transmission of channel messages</string>
     <string name="pref_title_private_message">Private messages</string>
     <string name="pref_summary_private_message">Announce private messages</string>
     <string name="pref_title_channel_message">Channel messages</string>
@@ -131,6 +141,17 @@
     <string name="text_tts_private_message">Private message from %1$s - %2$s</string>
     <string name="text_tts_channel_message">Channel message from %1$s - %2$s</string>
     <string name="text_tts_broadcast_message">Broadcast message from %1$s - %2$s</string>
+    <string name="text_tts_channel_msg_transmit_off">can no longer transmit channel messages!</string>
+    <string name="text_tts_channel_msg_transmit_on">can now transmit channel messages!</string>
+    <string name="text_tts_voice_transmit_off">can no longer transmit voice!</string>
+    <string name="text_tts_voice_transmit_on">can now transmit voice!</string>
+    <string name="text_tts_vid_transmit_off">can no longer transmit video input!</string>
+    <string name="text_tts_vid_transmit_on">can now transmit video input!</string>
+    <string name="text_tts_desk_transmit_off">can no longer transmit shared desktops!</string>
+    <string name="text_tts_desk_transmit_on">can now transmit shared desktops!</string>
+    <string name="text_tts_media_transmit_off">can no longer transmit media files!</string>
+    <string name="text_tts_media_transmit_on">can now transmit media files!</string>
+    <string name="text_tts_transmit_name_everyone">everyone</string>
     <string name="pref_header_soundsystem">Sound System</string>
     <string name="title_activity_audio_codec">Audio Codec</string>
     <string name="title_activity_filepicker">File Selection</string>
